--- a/notebook/eda/dataprep.ipynb
+++ b/notebook/eda/dataprep.ipynb
@@ -394,28 +394,192 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "tmp_df1 = pd.merge(filtered_we, filtered_fr, how='outer', on=['Entity','Year'])\n",
     "tmp_df2 = pd.merge(tmp_df1, filtered_gdp, how='outer', on=['Entity', 'Year'])\n",
-    "tmp_df3 = pd.merge(tmp_df2, filtered_age, how='outer', on=['Entity', 'Year'])\n",
-    "tmp_df4 = pd.merge(tmp_df3, filtered_we, how='outer', on=['Entity', 'Year'])"
+    "tmp_df3 = pd.merge(tmp_df2, filtered_age, how='outer', on=['Entity', 'Year'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
-    "merged_df = tmp_df4.filter(items=['Entity','Year','we_avg_yr','fr','median_age','gdp_ppp'])"
+    "merged_df = tmp_df3.filter(items=['Entity','Year','we_avg_yr','fr','median_age','gdp_ppp'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Entity</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>we_avg_yr</th>\n",
+       "      <th>fr</th>\n",
+       "      <th>median_age</th>\n",
+       "      <th>gdp_ppp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Germany</td>\n",
+       "      <td>1990</td>\n",
+       "      <td>8.74</td>\n",
+       "      <td>1.460</td>\n",
+       "      <td>36.600</td>\n",
+       "      <td>2915.150994</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Germany</td>\n",
+       "      <td>1991</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.344</td>\n",
+       "      <td>36.658</td>\n",
+       "      <td>3064.064531</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Germany</td>\n",
+       "      <td>1992</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.305</td>\n",
+       "      <td>36.726</td>\n",
+       "      <td>3122.988838</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Germany</td>\n",
+       "      <td>1993</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.288</td>\n",
+       "      <td>36.838</td>\n",
+       "      <td>3092.481927</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Germany</td>\n",
+       "      <td>1994</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.254</td>\n",
+       "      <td>37.047</td>\n",
+       "      <td>3166.450757</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>94</th>\n",
+       "      <td>United States</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.715</td>\n",
+       "      <td>36.818</td>\n",
+       "      <td>20051.019065</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>United States</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.684</td>\n",
+       "      <td>37.002</td>\n",
+       "      <td>20511.077482</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>United States</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>13.42</td>\n",
+       "      <td>1.616</td>\n",
+       "      <td>37.226</td>\n",
+       "      <td>19943.371364</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>United States</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.634</td>\n",
+       "      <td>37.466</td>\n",
+       "      <td>21129.101470</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>United States</td>\n",
+       "      <td>2022</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.665</td>\n",
+       "      <td>37.720</td>\n",
+       "      <td>21538.083667</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>99 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Entity  Year  we_avg_yr     fr  median_age       gdp_ppp\n",
+       "0         Germany  1990       8.74  1.460      36.600   2915.150994\n",
+       "1         Germany  1991        NaN  1.344      36.658   3064.064531\n",
+       "2         Germany  1992        NaN  1.305      36.726   3122.988838\n",
+       "3         Germany  1993        NaN  1.288      36.838   3092.481927\n",
+       "4         Germany  1994        NaN  1.254      37.047   3166.450757\n",
+       "..            ...   ...        ...    ...         ...           ...\n",
+       "94  United States  2018        NaN  1.715      36.818  20051.019065\n",
+       "95  United States  2019        NaN  1.684      37.002  20511.077482\n",
+       "96  United States  2020      13.42  1.616      37.226  19943.371364\n",
+       "97  United States  2021        NaN  1.634      37.466  21129.101470\n",
+       "98  United States  2022        NaN  1.665      37.720  21538.083667\n",
+       "\n",
+       "[99 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
