--- a/notebook/model/start.ipynb
+++ b/notebook/model/start.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,18 +30,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data['emp_pop_ratio'] = data['emp_pop_ratio'].fillna(data['emp_pop_ratio'].mean())\n",
-    "data['gdp_ppp'] = data['gdp_ppp'].fillna(data['gdp_ppp'].mean())\n",
-    "data['fr_ratio'] = data['fr_ratio'].fillna(data['fr_ratio'].mean())"
+    "# data['emp_pop_ratio'] = data['emp_pop_ratio'].fillna(data['emp_pop_ratio'].mean())\n",
+    "# data['gdp_ppp'] = data['gdp_ppp'].fillna(data['gdp_ppp'].mean())\n",
+    "# data['fr_ratio'] = data['fr_ratio'].fillna(data['fr_ratio'].mean())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
