--- a/notebook/eda/dataprep.ipynb
+++ b/notebook/eda/dataprep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
        "(np.int64(1990), np.int64(2022))"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,172 +414,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Entity</th>\n",
-       "      <th>Year</th>\n",
-       "      <th>we_avg_yr</th>\n",
-       "      <th>fr</th>\n",
-       "      <th>median_age</th>\n",
-       "      <th>gdp_ppp</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Germany</td>\n",
-       "      <td>1990</td>\n",
-       "      <td>8.74</td>\n",
-       "      <td>1.460</td>\n",
-       "      <td>36.600</td>\n",
-       "      <td>2915.150994</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Germany</td>\n",
-       "      <td>1991</td>\n",
-       "      <td>8.88</td>\n",
-       "      <td>1.344</td>\n",
-       "      <td>36.658</td>\n",
-       "      <td>3064.064531</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Germany</td>\n",
-       "      <td>1992</td>\n",
-       "      <td>8.99</td>\n",
-       "      <td>1.305</td>\n",
-       "      <td>36.726</td>\n",
-       "      <td>3122.988838</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Germany</td>\n",
-       "      <td>1993</td>\n",
-       "      <td>9.13</td>\n",
-       "      <td>1.288</td>\n",
-       "      <td>36.838</td>\n",
-       "      <td>3092.481927</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Germany</td>\n",
-       "      <td>1994</td>\n",
-       "      <td>9.33</td>\n",
-       "      <td>1.254</td>\n",
-       "      <td>37.047</td>\n",
-       "      <td>3166.450757</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>94</th>\n",
-       "      <td>United States</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>13.39</td>\n",
-       "      <td>1.715</td>\n",
-       "      <td>36.818</td>\n",
-       "      <td>20051.019065</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>95</th>\n",
-       "      <td>United States</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>13.40</td>\n",
-       "      <td>1.684</td>\n",
-       "      <td>37.002</td>\n",
-       "      <td>20511.077482</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>96</th>\n",
-       "      <td>United States</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>13.42</td>\n",
-       "      <td>1.616</td>\n",
-       "      <td>37.226</td>\n",
-       "      <td>19943.371364</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>97</th>\n",
-       "      <td>United States</td>\n",
-       "      <td>2021</td>\n",
-       "      <td>13.45</td>\n",
-       "      <td>1.634</td>\n",
-       "      <td>37.466</td>\n",
-       "      <td>21129.101470</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>98</th>\n",
-       "      <td>United States</td>\n",
-       "      <td>2022</td>\n",
-       "      <td>13.45</td>\n",
-       "      <td>1.665</td>\n",
-       "      <td>37.720</td>\n",
-       "      <td>21538.083667</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>99 rows × 6 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           Entity  Year  we_avg_yr     fr  median_age       gdp_ppp\n",
-       "0         Germany  1990       8.74  1.460      36.600   2915.150994\n",
-       "1         Germany  1991       8.88  1.344      36.658   3064.064531\n",
-       "2         Germany  1992       8.99  1.305      36.726   3122.988838\n",
-       "3         Germany  1993       9.13  1.288      36.838   3092.481927\n",
-       "4         Germany  1994       9.33  1.254      37.047   3166.450757\n",
-       "..            ...   ...        ...    ...         ...           ...\n",
-       "94  United States  2018      13.39  1.715      36.818  20051.019065\n",
-       "95  United States  2019      13.40  1.684      37.002  20511.077482\n",
-       "96  United States  2020      13.42  1.616      37.226  19943.371364\n",
-       "97  United States  2021      13.45  1.634      37.466  21129.101470\n",
-       "98  United States  2022      13.45  1.665      37.720  21538.083667\n",
-       "\n",
-       "[99 rows x 6 columns]"
-      ]
-     },
-     "execution_count": 76,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           Entity  Year  we_avg_yr     fr  median_age       gdp_ppp\n",
+      "0         Germany  1990       8.74  1.460      36.600   2915.150994\n",
+      "1         Germany  1991       8.88  1.344      36.658   3064.064531\n",
+      "2         Germany  1992       8.99  1.305      36.726   3122.988838\n",
+      "3         Germany  1993       9.13  1.288      36.838   3092.481927\n",
+      "4         Germany  1994       9.33  1.254      37.047   3166.450757\n",
+      "5         Germany  1995       9.61  1.262      37.292   3215.345395\n",
+      "6         Germany  1996       9.73  1.330      37.536   3241.255385\n",
+      "7         Germany  1997       9.78  1.377      37.776   3299.343894\n",
+      "8         Germany  1998       9.92  1.364      38.200   3365.790462\n",
+      "9         Germany  1999      10.06  1.370      38.669   3429.311718\n",
+      "10        Germany  2000      10.14  1.386      39.015   3529.190523\n",
+      "11        Germany  2001      10.34  1.354      39.373   3588.532750\n",
+      "12        Germany  2002      10.45  1.344      39.737   3581.428394\n",
+      "13        Germany  2003      10.76  1.343      40.121   3556.354216\n",
+      "14        Germany  2004      11.34  1.361      40.537   3598.144512\n",
+      "15        Germany  2005      11.79  1.344      40.950   3624.472393\n",
+      "16        Germany  2006      11.88  1.339      41.493   3762.798277\n",
+      "17        Germany  2007      11.99  1.378      42.075   3874.796279\n",
+      "18        Germany  2008      12.00  1.387      42.541   3911.989640\n",
+      "19        Germany  2009      12.20  1.367      42.920   3689.247353\n",
+      "20        Germany  2010      12.43  1.400      43.265   3843.453557\n",
+      "21        Germany  2011      12.45  1.385      43.632   3994.316516\n",
+      "22        Germany  2012      12.45  1.405      44.076   4011.032634\n",
+      "23        Germany  2013      12.48  1.415      44.487   4028.584564\n",
+      "24        Germany  2014      12.50  1.469      44.733   4117.597890\n",
+      "25        Germany  2015      12.54  1.501      44.813   4179.029631\n",
+      "26        Germany  2016      12.58  1.591      44.816   4272.221986\n",
+      "27        Germany  2017      12.64  1.570      44.889   4386.727409\n",
+      "28        Germany  2018      12.77  1.566      44.928   4429.771409\n",
+      "29        Germany  2019      12.90  1.541      44.904   4477.412344\n",
+      "30        Germany  2020      12.96  1.531      44.876   4306.072129\n",
+      "31        Germany  2021      13.10  1.577      44.923   4442.308498\n",
+      "32        Germany  2022      13.20  1.460      45.024   4522.545872\n",
+      "33          India  1990       2.40  4.045      19.687   1583.371287\n",
+      "34          India  1991       2.50  3.959      19.795   1600.104852\n",
+      "35          India  1992       2.50  3.877      19.914   1687.828937\n",
+      "36          India  1993       2.70  3.799      20.046   1768.013913\n",
+      "37          India  1994       2.80  3.723      20.186   1885.744617\n",
+      "38          India  1995       2.84  3.651      20.335   2028.580189\n",
+      "39          India  1996       2.90  3.582      20.493   2181.728302\n",
+      "40          India  1997       3.15  3.514      20.659   2270.084389\n",
+      "41          India  1998       3.34  3.446      20.833   2410.475847\n",
+      "42          India  1999       3.54  3.383      21.012   2623.700649\n",
+      "43          India  2000       3.63  3.350      21.192   2724.476759\n",
+      "44          India  2001       3.95  3.303      21.373   2855.904598\n",
+      "45          India  2002       4.13  3.217      21.566   2964.542504\n",
+      "46          India  2003       4.25  3.122      21.775   3197.566854\n",
+      "47          India  2004       4.33  3.046      22.003   3450.908049\n",
+      "48          India  2005       4.42  2.958      22.244   3724.338354\n",
+      "49          India  2006       4.51  2.867      22.501   4024.547309\n",
+      "50          India  2007       4.87  2.775      22.773   4332.860436\n",
+      "51          India  2008       4.98  2.711      23.054   4466.602755\n",
+      "52          India  2009       5.16  2.674      23.342   4817.762098\n",
+      "53          India  2010       5.26  2.598      23.641   5227.155513\n",
+      "54          India  2011       5.66  2.532      23.949   5501.127199\n",
+      "55          India  2012       5.98  2.470      24.265   5801.290085\n",
+      "56          India  2013       6.08  2.399      24.588   6171.766642\n",
+      "57          India  2014       6.12  2.293      24.925   6629.108597\n",
+      "58          India  2015       6.16  2.289      25.271   7159.188945\n",
+      "59          India  2016       6.20  2.284      25.613   7750.273455\n",
+      "60          India  2017       6.50  2.193      25.961   8276.934253\n",
+      "61          India  2018       6.80  2.184      26.313   8811.115285\n",
+      "62          India  2019       7.05  2.120      26.668   9152.232057\n",
+      "63          India  2020       7.15  2.047      27.024   8618.560535\n",
+      "64          India  2021       7.25  2.014      27.348   9398.564215\n",
+      "65          India  2022       7.30  1.994      27.684  10078.991437\n",
+      "66  United States  1990      12.62  2.072      31.903  10097.624386\n",
+      "67  United States  1991      12.67  2.059      32.142  10086.692214\n",
+      "68  United States  1992      12.72  2.039      32.376  10441.989949\n",
+      "69  United States  1993      12.78  2.010      32.614  10729.330650\n",
+      "70  United States  1994      12.80  1.988      32.863  11161.593200\n",
+      "71  United States  1995      12.82  1.965      33.122  11461.194612\n",
+      "72  United States  1996      12.87  1.960      33.380  11893.575686\n",
+      "73  United States  1997      12.99  1.956      33.634  12422.503804\n",
+      "74  United States  1998      13.06  1.980      33.872  12979.205198\n",
+      "75  United States  1999      13.12  1.990      34.095  13601.493067\n",
+      "76  United States  2000      13.16  2.030      34.291  14156.047631\n",
+      "77  United States  2001      13.20  2.011      34.479  14291.144276\n",
+      "78  United States  2002      13.10  2.003      34.672  14533.513926\n",
+      "79  United States  2003      13.10  2.025      34.845  14939.901365\n",
+      "80  United States  2004      13.12  2.031      35.009  15515.468923\n",
+      "81  United States  2005      13.11  2.040      35.175  16055.906890\n",
+      "82  United States  2006      13.20  2.087      35.352  16502.712373\n",
+      "83  United States  2007      13.24  2.096      35.531  16834.500651\n",
+      "84  United States  2008      13.30  2.053      35.689  16855.070465\n",
+      "85  United States  2009      13.33  1.987      35.817  16416.857452\n",
+      "86  United States  2010      13.35  1.916      35.920  16861.566594\n",
+      "87  United States  2011      13.35  1.879      36.008  17122.903163\n",
+      "88  United States  2012      13.35  1.862      36.090  17513.423093\n",
+      "89  United States  2013      13.36  1.840      36.175  17835.998523\n",
+      "90  United States  2014      13.36  1.848      36.274  18244.046205\n",
+      "91  United States  2015      13.37  1.832      36.387  18737.797522\n",
+      "92  United States  2016      13.37  1.804      36.509  19050.245063\n",
+      "93  United States  2017      13.38  1.753      36.650  19477.336549\n",
+      "94  United States  2018      13.39  1.715      36.818  20051.019065\n",
+      "95  United States  2019      13.40  1.684      37.002  20511.077482\n",
+      "96  United States  2020      13.42  1.616      37.226  19943.371364\n",
+      "97  United States  2021      13.45  1.634      37.466  21129.101470\n",
+      "98  United States  2022      13.45  1.665      37.720  21538.083667\n"
+     ]
     }
    ],
    "source": [
-    "merged_df"
+    "print(merged_df.to_string())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
