feat: eda additional done

--- a/notebook/model/end.ipynb
+++ b/notebook/model/end.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,8 +46,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exponential Smoothing"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -105,12 +112,19 @@
     "    'India_GDP_Forecast': india_forecast_extended,\n",
     "    'USA_GDP_Forecast': usa_forecast_extended,\n",
     "    'Germany_GDP_Forecast': germany_forecast_extended,\n",
-    "})"
+    "})\n",
+    "\n",
+    "forecast_df_extended['India_vs_USA'] = forecast_df_extended['India_GDP_Forecast'] - forecast_df_extended['USA_GDP_Forecast']\n",
+    "forecast_df_extended['India_vs_Germany'] = forecast_df_extended['India_GDP_Forecast'] - forecast_df_extended['Germany_GDP_Forecast']\n",
+    "\n",
+    "# Find crossover years\n",
+    "crossover_year_usa = forecast_df_extended[forecast_df_extended['India_vs_USA'] >= 0].iloc[0]['Year'] if not forecast_df_extended[forecast_df_extended['India_vs_USA'] >= 0].empty else None\n",
+    "crossover_year_germany = forecast_df_extended[forecast_df_extended['India_vs_Germany'] >= 0].iloc[0]['Year'] if not forecast_df_extended[forecast_df_extended['India_vs_Germany'] >= 0].empty else None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
